<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height"
        android:gravity="center_vertical"
        android:background="@drawable/bottom_shadowed">

        <TextView
            android:id="@+id/welcome_message_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_spacing"
            android:layout_marginLeft="@dimen/default_spacing"
            android:text="@string/default_welcome_message"
            android:textColor="@color/spinner_text_color"
            android:textSize="@dimen/config_form_title_text_size" />

    </LinearLayout>

    <include
        android:layout_marginTop="-5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/view_status_layout"
        android:visibility="invisible" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_spacing"
        android:layout_marginRight="@dimen/default_spacing"
        android:layout_marginTop="@dimen/default_spacing"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/server_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_spacing"
            android:layout_marginRight="@dimen/default_spacing"
            android:gravity="center_horizontal"
            android:singleLine="true"
            android:text="@string/user_credentials_text_size"
            android:textSize="@dimen/server_url_form_text_size"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/login_form_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_spacing"
        android:layout_marginRight="@dimen/default_spacing"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_spacing"
            android:layout_marginRight="@dimen/default_spacing"
            android:layout_marginBottom="@dimen/default_spacing"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:hint="@string/connect_as"
                android:imeOptions="actionNext"
                android:inputType="textNoSuggestions"
                android:nextFocusDown="@id/password_input"
                android:nextFocusForward="@id/password_input"
                android:singleLine="true"
                android:textSize="@dimen/form_field_text_size"
                tools:ignore="Autofill" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_spacing"
            android:layout_marginRight="@dimen/default_spacing"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:imeOptions="actionGo"
                android:inputType="textPassword|textNoSuggestions"
                android:singleLine="true"
                android:textSize="@dimen/form_field_text_size"
                tools:ignore="Autofill" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/action_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/default_spacing"
            android:text="@string/login"
            android:textColor="@color/main_color" />

    </LinearLayout>


</LinearLayout>
