<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:ignore="UselessParent">


    <LinearLayout
        android:background="@drawable/bottom_shadowed"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height">

        <TextView
            android:id="@+id/form_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_spacing"
            android:layout_marginLeft="@dimen/default_spacing"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/enterprise_id_title"
            android:textColor="@color/spinner_text_color"
            android:textSize="@dimen/config_form_title_text_size"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

    <include
        android:layout_marginTop="-5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/view_status_layout"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_marginLeft="@dimen/default_spacing"
        android:layout_marginRight="@dimen/default_spacing"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/server_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/enterprise_id_form_text"
            android:textSize="@dimen/server_url_form_text_size"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/server_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/default_spacing"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="@dimen/form_section_margin_bottom"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/main_color">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/url_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:imeOptions="actionGo"
                android:inputType="textUri"
                android:singleLine="true"
                android:hint="@string/enterprise_id_hint"
                android:textSize="@dimen/form_field_text_size"
                tools:ignore="Autofill,LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/action_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/default_spacing"
            android:focusable="true"
            android:text="@string/connect"
            android:textColor="@color/main_color"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

</LinearLayout>
